DEW-145: Fixed skeleton styling on mobile

--- a/src/components/Table/component.module.scss
+++ b/src/components/Table/component.module.scss
@@ -151,7 +151,7 @@
     @include respond-below(md) {
       display: grid;
 
-      grid-template-columns: 1fr;
+      grid-template-columns: 1fr 1fr;
       grid-template-rows: 1fr;
       grid-auto-flow: column;
 
