--- a/src/views/MetagraphsView/view.module.scss
+++ b/src/views/MetagraphsView/view.module.scss
@@ -27,6 +27,10 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+
+    @include respond-below(md) {
+      width: 110px;
+    }
   }
 
   .metagraphLink {
